poster titile not showing in full bug fixed

--- a/app_hubstar/app/styles/style.css
+++ b/app_hubstar/app/styles/style.css
@@ -764,15 +764,15 @@ input[type=checkbox].css-checkbox.med + label.css-label.med {
 
 /*CONTACT ME  BUTTON*/
 .contactmebtn {
-    position: relative;
+    position: absolute;
     z-index: 1;
     text-align: center;
     float: right;
-    bottom: 30px;
-    right: 30px;
+    bottom: auto;
+    right: 2px;
     cursor: pointer;
-
     margin: 0 10px;
+    top: 27px;
 }
 
 .contactmeicon{
